# duskvow

./: .env.example  .gitignore  BML-PLAN.md  CLAUDE.md  CONTEXT.md  IN-APP-COPY-PIVOT-PROPOSALS.md  IN-APP-TONE-AUDIT.md  LANDING-COPY-PIVOT-PART-2.md  LANDING-COPY-PIVOT.md  LICENSE  README.md  SECURITY_AUDIT_2026-04-16.md  SPEC.archive.md  SPEC.md  STATE.md  STRATEGY.md  TASKS.md  duskvow-landing.html
.claude/: settings.local.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: __init__.py  achievements.py  dungeon.py  embers.py  inventory.py  leaderboard.py  nodes.py  profile.py  public.py  quests.py  trees.py
backend/app/core/: auth.py  config.py  dependencies.py  supabase.py
backend/app/data/: achievements.json  dungeon_pools.json  level_unlocks.json
backend/app/models/: ember.py  talent_tree.py
backend/app/prompts/: followup_questions.txt  generate_tree.txt
backend/app/schemas/: dungeon.py  embers.py  nodes.py  profile.py  quests.py  trees.py
backend/app/services/: achievements.py  dungeon.py  gemini.py  progression.py
backend/tests/: conftest.py  helpers.py  test_auth.py  test_embers.py  test_health.py  test_nodes.py  test_profile.py  test_trees.py
docs/sprints/: completed-tasks.md  sprint-a-hero-level.md  sprint-b-daily-quests.md  sprint-c-dungeon.md  sprint-d-progression.md
frontend/: next.config.ts  package-lock.json  package.json  vercel.json
frontend/public/: _redirects  site.webmanifest
frontend/scripts/: convert-node-icons.mjs  (+2 more)
scripts/: runner.mjs
supabase/: config.toml
(+98 files in other folders)
